--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body onload="document.body.style.opacity='1'">
     <div id="container">
       <div id="blocked">
-        <div id="logo">hi loser.</div>
+        <div id="logo">yO</div>
         <div id="search">
           <form>
             <input id="box" type="text" autocomplete="off" placeholder='type here idiot' /></form>
